feat: new-features

--- a/.env
+++ b/.env
@@ -4,6 +4,14 @@ TWILIO_AUTH_TOKEN="your-twilio-auth-token"
 GOOGLE_MAPS_API_KEY="AIzaSyAgCzyfKDZ3upZhkpqXNVUISaD9m4FWL4s"
 JWT_SECRET="12345678"
 
+# ProxyPay Configuration
+PROXYPAY_API_URL="https://api.sandbox.proxypay.co.ao"
+PROXYPAY_API_KEY="zrbb6u34fdaxd73dghph6rqfkphpxuij"
+PROXYPAY_ENVIRONMENT="sandbox"
+PROXYPAY_MERCHANT_ID="01005"
+PROXYPAY_ENTITY_ID="01005"
+PROXYPAY_FETCH_PAYMENTS_MINUTES="10"
+
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
