--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ SMTP_PASS="your-app-password"
 # Server Configuration
 PORT=3000
 NODE_ENV="development"
+
+# Rental Configuration
+RENTAL_PAYMENT_TIMEOUT_HOURS=24
